# tiny-AES-c

./: .gitignore  CMakeLists.txt  README.md  aes.c
include/: tiny-aes.h  tiny-aes.hpp
